# ComfyUI_FaceProcessor

./: __init__.py  contex_generator.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
core/: base_landmarks.py  base_mesh.py  cpu_deformer.py  face_detector.py  gpu_deformer.py  image_processor.py  lm_mapping.py
core/resources/: model_loader.py
nodes/: face_fit_and_restore.py  face_tracker.py  face_wrapper.py  fit_and_crop.py  fp_pipe_debug.py  image_feeder.py  image_filters.py  restore_face.py  tools.py
workflow/: FaceProcessor_basic.json
